Se eliimino clase main

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </div>
   </nav>
   <div class="container my-5">
-    <div class="position-relative p-5 text-center text-muted bg-body border border-dashed rounded-5">
+    <div class="position-relative p-1 text-center text-success bg-body border border-dashed rounded-3">
       <button type="button" class="position-absolute top-0 end-0 p-3 m-3 btn-close bg-secondary bg-opacity-10 rounded-pill" aria-label="Close"></button>
-      <svg class="bi mt-5 mb-3" width="48" height="48"><use xlink:href="#check2-circle"></use></svg>
-      <h1 class="text-body-emphasis">Registrate</h1>
-      <p class="col-lg-6 mx-auto mb-4">
+      <svg class="bi mt-5 mb-3" width="15" height="15"><use xlink:href="#check2-circle"></use></svg>
+      <h4 class="text-body-emphasis">Registrate</h4>
+      <p class="col-lg-9 mx-auto mb-4">
         Ingresa tu cuenta de correo para recibir noticias de nuestras próximas meditaciones grupales y de nuestros descuentos.
       </p>
       <p>
@@ -61,44 +61,45 @@
       </button>
     </div>
   </div>
-
-</body> 
+  </body> 
  </header>
- <div class="container 1">
-  
+ <body>
+<main class="main">
+<div class="row">
 
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
- <span class="border border-success">
-    <div class="col d-flex align-items-start">
-      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"></use></svg>
-      <div>
-        
-        <h3 class="fw-bold mb-0 fs-4">Terapias Holisticas</h3>
-        <p>La eficacia de las terapias holísticas ha quedado demostrada en diversos casos, por lo que ha llegado a formar parte los de sistemas de salud en numerosos países del mundo. Con este alcance internacional y evolución de la disciplina, poco a poco han ido surgiendo variaciones en las técnicas de las terapias del pensamiento holístico.</p>
-      </div>
-    </div>
- </span>
- <span class="border border-success">
-    <div class="col d-flex align-items-start">
-      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#cpu-fill"></use></svg>
-      <div>
-        <h3 class="fw-bold mb-0 fs-4">Flores de Bach</h3>
-        <p>La eficacia de las terapias holísticas ha quedado demostrada en diversos casos, por lo que ha llegado a formar parte los de sistemas de salud en numerosos países del mundo. Con este alcance internacional y evolución de la disciplina, poco a poco han ido surgiendo variaciones en las técnicas de las terapias del pensamiento holístico.</p>
-      </div>
-    </div>
-  </span>
-  <span class="border border-success">
-    <div class="col d-flex align-items-start">
-      <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#calendar3"></use></svg>
-      <div>
-        <h3 class="fw-bold mb-0 fs-4">Citas</h3>
-        <p>Revisa nuestro calendario para agendar citas para terapias holisticas presenciales, para tratamiento de Flores de Bach, o para acudir a alguna de nuestras meditaciones grupales.</p></p>
-      </div>
-    </div>
-   </div>
-  </span>
+<div class="col-sm-4">
+<div class="card2" style="width: 18rem;">
+  <img class="card-img-top" src="flores.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Flores de Bach</h5>
+    <p class="card-text">son una serie de esencias naturales utilizadas para tratar diversas situaciones emocionales, como miedos, soledad, desesperación, estrés, depresión y obsesiones. </p>
+    <a href="servicios.html" class="btn btn-outline-success">Seguir</a>
+  </div>
 </div>
-     
+</div> 
+ <div class="col-sm-4">
+ <div class="card1" style="width: 18rem;">
+  <img class="card-img-top" src="terapias.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Terapias Holisticas</h5>
+    <p class="card-text">Poco a poco han ido surgiendo variaciones en las técnicas de las terapias del pensamiento holístico. Ven y conoce las diversas terapias holisticas que manejamos</p>
+    <a href="servicios.html" class="btn btn-outline-success">Seguir</a>
+  </div>
+ </div>
+</div>     
+<div class="col-sm-4">
+<div class="card3" style="width: 18rem;">
+  <img class="card-img-top" src="meditaciones.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Meditaciones Grupales</h5>
+    <p class="card-text">la meditación grupal refuerza tu deseo de que se convierta en una práctica cotidiana. </p>
+    <a href="servicios.html" class="btn btn-outline-success">Seguir</a>
+  </div>
+</div>
+</div>       
+</div>
+</main>
+</body>     
     <div class="container footer-sm"></div>
       <footer class="py-5">
         <div class="row">
